--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <script src="./js/script.js"></script>
       <link rel="stylesheet" href="./css/global.css">
       <link rel="stylesheet" href="./css/responsive.css">     
-      <link rel="icon" href="./Assets/emoji_novo.png">
+      <link rel="icon" href="./imagens/icon.png">
       <title>julliaamorim.dev</title>
    </head>   
    <body>
